# ynfdeals-odoo18

./: .gitignore  .mcp.json  GITLAB_FULL_DOCUMENTATION.md  README.md  nohup.out  package-lock.json
whatnot-collector/: .env.example  README.md  check_db.py  docker-compose.postgres.yml  fetch_missing_images.py  generate_scripts.py  pyproject.toml  pyrightconfig.json  requirements.txt  scanner_daemon.py  start-dashboard.sh  start-scanner.sh  test_collector.py  test_db.py  test_selectors.py  tools_login.py  tools_open.py  tools_tiktok_seller_login.py  whatnot-scanner.service  whatnot-shop-autoscrape.service
whatnot-collector/app/: __init__.py  config.py  main.py
whatnot-collector/dashboard-react/: app.js  index.html  style.css
whatnot-collector/dashboard-vite/: .env  .env.example  index.html  ops-next.html  package-lock.json  package.json  vite.config.js
whatnot-collector/deploy/: nginx-dashboard.conf
whatnot-collector/docs/: INDEX.md  api_reference.md  backend_architecture.md  backend_database_runtime.md  collector_deep_dive.md  contribution_safety_guide.md  database_schema_reference.md  deployment_service_autostart.md  frontend_architecture.md  gitlab_onboarding_from_odoo.md  glossary.md  intern_handbook.md  inventory_data_guide.md  inventory_to_tiktok_mapping.md  main_runtime_complete.md  migration_progress_tracker.md  pdf_label_enrichment.md  perfume_stream_playbook.md  postgres_primary_cutover_plan.md  project_documentation.md  recovery_playbook.md  runbook_live_operations.md  runtime_stabilization_runbook.md  sana_fathima_daywise_tasks.md  testing_guide.md  (+5 more)
(+828 files in other folders)
