[project]
name = "whatnot-collector"
version = "0.1.0"
description = "Whatnot livestream auction collector"
requires-python = ">=3.10"

[project.optional-dependencies]
api = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
]
workers = [
    "celery[redis]>=5.4,<6",
    "redis>=5,<8",
]
redis = ["redis>=5,<7"]
postgres = ["psycopg2-binary>=2.9,<3"]
sidecar = [
    "psycopg2-binary>=2.9,<3",
    "redis>=5,<8",
    "redislite>=6,<7",
]
runtime = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.8,<3",
    "celery[redis]>=5.4,<6",
    "redis>=5,<8",
    "psycopg2-binary>=2.9,<3",
]

[tool.black]
line-length = 100
